--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -1,4 +1,4 @@
-<h1><span class="yellow">Zekais-API</span></h1>
+<h1><span class="yellow">Dylan-Rest API</span></h1>
 <h2><span class="mb-2">Hello <%= username %>, Your Apikey : <%= apikey %></span></h2>
 
 <table class="container">
@@ -18,13 +18,13 @@
 			<td>Check Limit Apikey</td>
 		</tr>
 		<tr>
-			<td><a style="color:#FB667A" href="/api/ytmp3?url=https://www.youtube.com/watch?v=9JS47BC0WXc&apikey=<%= apikey %> " target="_blank">Youtube MP3</a></td>
+			<td><a style="color:#FB667A" href="/api/ytmp3?url=https://youtu.be/fHI8X4OXluQ&apikey=<%= apikey %> " target="_blank">Youtube MP3</a></td>
 			<td><span style="color:green">Active</span></td>
 			<td>url & apikey</td>
 			<td>Youtube Audio Downloader</td>
 		</tr>
 		<tr>
-			<td><a style="color:#FB667A" href="/api/ytmp4?url=https://www.youtube.com/watch?v=9JS47BC0WXc&apikey=<%= apikey %> " target="_blank">Youtube MP4</a></td>
+			<td><a style="color:#FB667A" href="/api/ytmp4?url=https://youtu.be/foE1mO2yM04&apikey=<%= apikey %> " target="_blank">Youtube MP4</a></td>
 			<td><span style="color:green">Active</span></td>
 			<td>url & apikey</td>
 			<td>Youtube Video Downloader</td>
@@ -34,42 +34,6 @@
 			<td><span style="color:green">Active</span></td>
 			<td>query & apikey</td>
 			<td>Youtube Audio Downloader</td>
-		</tr>
-    	<tr>
-			<td><a style="color:#FB667A" href="/api/caklontong?apikey=<%= apikey %> " target="_blank">CakLontong</a></td>
-			<td><span style="color:green">Active</span></td>
-			<td>apikey</td>
-			<td>Quiz CakLontong</td>
-		</tr>
-    	<tr>
-			<td><a style="color:#FB667A" href="/api/quotes?apikey=<%= apikey %> " target="_blank">Quotes</a></td>
-			<td><span style="color:green">Active</span></td>
-			<td>apikey</td>
-			<td>Random Quotes</td>
-		</tr>
-    	<tr>
-			<td><a style="color:#FB667A" href="/api/fakta?apikey=<%= apikey %> " target="_blank">Fakta</a></td>
-			<td><span style="color:green">Active</span></td>
-			<td>apikey</td>
-			<td>Random Fakta</td>
-		</tr>
-		<tr>
-			<td><a style="color:#FB667A" href="/api/bijak?apikey=<%= apikey %> " target="_blank">Bijak</a></td>
-			<td><span style="color:green">Active</span></td>
-			<td>apikey</td>
-			<td>Random Bijak</td>
-		</tr>
-		<tr>
-			<td><a style="color:#FB667A" href="/api/ptl?apikey=<%= apikey %> " target="_blank">Ptl</a></td>
-			<td><span style="color:green">Active</span></td>
-			<td>apikey</td>
-			<td>Random Penyegar Timeline</td>
-		</tr>
-		<tr>
-			<td><a style="color:#FB667A" href="/api/motivasi?apikey=<%= apikey %> " target="_blank">Motivasi</a></td>
-			<td><span style="color:green">Active</span></td>
-			<td>apikey</td>
-			<td>Random Motivasi</td>
 		</tr>
 	</tbody>
 </table>
