--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <div class="text-center">
-    <h1 class="display-3">Zekais-API</h1>
+    <h1 class="display-3">Dylan-Rest /API</h1>
     <p class="lead">Login First to see Docs</p>
-    <a href="/users/login" class="btn btn-dark btn-lg mb-2">Login</a>
+    <a href="/users/login" class="btn btn-dark btn-lg mb-2">LOGIN</a>
     <p class="lead">You Can Clone This API on <a href="https://github.com/fawwaz37/" target="_blank">Github</a></p>
-    <a href="https://github.com/fawwaz37/nodejs-restapi" target="_blank" class="btn btn-dark btn-lg mb-2">Source Code</a>
+    <a href="https://github.com" target="_blank" class="btn btn-dark btn-lg mb-2">Source Code</a>
 </div>
